frontend/src/assets/css/style.css
@import url(./card.css);
@import url(./navBar.css);
@import url(./login.css);
@import url(./header.css);
@import url(./adminNotif.css);
@import url(./addButton.css);
@import url(./calendar.css);
@import url(./testCard.css);
@import url(./roomCard.css);
@import url(./studentCheckInHeader.css);
@import url(./studentStatusElement.css);
@import url(./popout.css);
@import url(./studentStatusButton.css);
@import url(./studentRoomCard.css);
@import url(./studentStatusActions.css);


:root {
    --UcrBlue: #003DA5;
    --BlueHover: #02348a;
    --UcrGold: #FFB718;
    --GoldHover: #eba817;
    --White: #FFF;
    --Grey: #e2e2e2;
    --Green: #1adf00;
    --Red: #ff0000;
}

html {
    height: 100vh;
    width: 100vw;
}

input:focus {
    outline: none;
}

body {
    margin: 0;
    height: 100%;
    width: 100%;
}

#app {
    height: 100%;
    width: 100%;
    font-family: 'Oswald';
}

button {
    border: none;
}

button:hover {
    cursor: pointer;
}

/* style used for red error msgs */
.err-msg {
    color: var(--UcrGold);
    font-weight: 500;
    margin: 0;
    width: 185px;
}

/* admin home page setup */

.admin-home {
    display: grid;
    grid-template-columns: 270px 3fr;
    grid-template-rows: .1fr 1fr 1fr;
    grid-template-areas:
        "header header"
        "navbar card"
        "navbar card";
    height: 100%;
    width: 100%;
}

@media all and (max-width:642px) {
    .admin-home {
        grid-template-columns: 1fr 3fr;
    }
}

@media all and (max-width:642px) {
    .admin-home {
        grid-template-areas: "header header"
            "card card"
            "card card";
    }
}

@media all and (max-height:692px) {
    .admin-home {
        grid-template-areas:
            "header header"
            "card card"
            "card card";
    }
}

.corner {
    position: fixed;
    bottom: -5px;
    width: 50%;
    right: -13%;
    z-index: -2;
}

.corner img {
    width: 75%;
    height: auto;
}

.test-card-container {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    align-content: flex-start;
    overflow-y: auto;
    height: auto;
}
.student-room-card-container{
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    align-content: flex-start;
    overflow-y: auto;
    height: auto;
    grid-area: card;
    padding: 20px;
    flex-wrap: wrap;
}

.student-checkin-container {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: flex-start;
    align-content: flex-start;
    overflow-y: auto;
    height: auto;
}



@media all and (max-width:642px) {
    .test-card-container {
        justify-content: center;
    }
    .student-room-card-container{
        justify-content: center;
        overflow-y: auto;
        flex-wrap: wrap;
    }
    .admin-notif-container{
        justify-content: flex-start;
        justify-self: stretch;
        overflow-y: auto;
    }
    .admin-notif-element{
        flex-wrap: wrap;
    }
}

@media all and (max-height:692px) {
    .test-card-container {
        justify-content: center;
    }
    .student-room-card-container{
        justify-content: center;
        overflow-y: auto;
        flex-wrap: wrap;
    }
    .admin-notif-container{
        justify-content: flex-start;
        justify-self: stretch;
        overflow-y: auto;
    }
    .admin-notif-element{
        flex-wrap: wrap;
    }
}

.room-cards {
    display: flex;
    align-content: flex-start;
    flex-wrap: wrap;
    margin-top: 50px;
}

@media all and (max-width:1000px) {
    .room-cards {
        justify-content: center;
    }
}


.room-page-contents {
    grid-area: card;
}

